# singlepp_loaders

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  dir_d47cbbe5e5de78f7d1f3bfb90e3d34a2.html  files.html  functions.html  functions_vars.html  index.html  labels_8hpp.html  labels_8hpp_source.html  markers_8hpp.html  markers_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacesinglepp__loaders.html  rankings_8hpp.html  rankings_8hpp_source.html  singlepp__loaders_8hpp.html  singlepp__loaders_8hpp_source.html  singlepp_loaders.tag  structsinglepp__loaders_1_1LoadLabelsOptions-members.html  structsinglepp__loaders_1_1LoadLabelsOptions.html  structsinglepp__loaders_1_1LoadMarkersOptions-members.html  structsinglepp__loaders_1_1LoadMarkersOptions.html  structsinglepp__loaders_1_1LoadRankingsOptions-members.html  structsinglepp__loaders_1_1LoadRankingsOptions.html  verify_8hpp.html  verify_8hpp_source.html
docs/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_7.js  classes_c.js  files_10.js  files_2.js  files_3.js  files_7.js  files_9.js  files_d.js  files_e.js  files_f.js  functions_11.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  functions_f.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  (+13 more)
include/singlepp_loaders/: labels.hpp  markers.hpp  rankings.hpp  singlepp_loaders.hpp  verify.hpp
tests/: CMakeLists.txt
tests/src/: labels.cpp  markers.cpp  rankings.cpp  utils.h  verify.cpp
